[project]
name = "comfyui-cohernetvideosampler"
description = "A custom node for ComfyUI that enables coherent video generation while maintaining efficient memory usage, specifically optimized for heavy models like Flux."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ShmuelRonen/ComfyUI-CohernetVideoSampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-CohernetVideoSampler"
Icon = ""
